Fix for issue with offsetTop on mobile, text updates

--- a/css/style.css
+++ b/css/style.css
@@ -166,6 +166,7 @@ header p {
   border: 1px solid #323232;
   padding: 16px;
   box-sizing: border-box;
+  z-index: 1000;
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
   -khtml-user-select: none; /* Konqueror HTML */
